Updated by task 'AUTO_TM_MT_1754474197838' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/ce5df8ea7a45cc609d09bb4a89f40857061500fb

--- a/help/release-notes/maintenance/2024/2024-3-0.md
+++ b/help/release-notes/maintenance/2024/2024-3-0.md
@@ -4,10 +4,10 @@ description: Note sulla versione di manutenzione di  [!DNL Adobe Experience Mana
 exl-id: 9428f6eb-a812-450f-ae55-ce4e8b9f60f4
 feature: Release Information
 role: Admin
-source-git-commit: b7e8fd902bb2fe98e183b7d987b87fee69e48337
+source-git-commit: c2258a7cfabb551fe7be122d88d896b8c5db388d
 workflow-type: tm+mt
-source-wordcount: '4192'
-ht-degree: 98%
+source-wordcount: '4187'
+ht-degree: 96%
 
 ---
 
@@ -23,7 +23,7 @@ Con l’attivazione delle funzioni 2024.3.0 viene fornito il set di funzioni com
 
 ### Miglioramenti {#enhancements-15860}
 
-Nessuno.
+Nessuna.
 
 ### Problemi risolti {#fixed-issues-15860}
 
@@ -31,7 +31,7 @@ Nessuno.
 
 ### Problemi noti {#known-issues-15860}
 
-Nessuno.
+Nessuna.
 
 ### Funzioni e API obsolete {#deprecated-15860}
 
@@ -101,7 +101,7 @@ Con l’attivazione delle funzioni 2024.3.0 viene fornito il set di funzioni com
 * SITES-19251 - Sito rapido - Creazione guidata - Barra laterale dell’interfaccia utente di amministrazione dei siti di supporto quando il riferimento al tema non è uguale al nome del sito
 * SITES-15430 - Editor universale - Editor universale nel dominio AEM
 * CQ-4344966 - WCM - Traduzione - Creazione di un framework di base per l’aggiornamento strutturale dei siti e aggiornamento di quello esistente per le risorse
-* CQ-4347312 - WCM - Traduzione - Creazione di un flusso di lavoro per associare “cq:translationsourcejcruuid” nelle copie sorgente e lingua esistenti
+* CQ-4347312 - WCM - Traduzione - Crea un flusso di lavoro per associare &quot;cq:translationsourcejcruuid&quot; nelle copie di origine e lingua esistenti
 * CQ-4354509 - WCM - Traduzione - Pubblicazione di eventi processo di traduzione [OSGi EventAdmin]
 * SITES-16318 - Crosswalk - Authoring basato su AEM con Edge Delivery Services
 * FORMS-9889: l’utente può aggiungere la configurazione URL POST e Cloud durante la configurazione dell’azione Invia all’endpoint REST
@@ -170,7 +170,7 @@ Con l’attivazione delle funzioni 2024.3.0 viene fornito il set di funzioni com
 * SITES-17894 - Lanci - La promozione di lanci nidificati ripristina il contenuto del lancio a una versione precedente
 * SITES-16042 - MSM - Live Copy - Le annotazioni non vengono visualizzate correttamente nella Live Copy dopo i rollout
 * SITES-16691 - MSM - Live Copy - Quando viene selezionato “rollout” o “rollout per” dall’icona “rollout” su un componente, il pulsante “Continua” è disattivato.
-* SITES-16733 - MSM - Live Copy - Non è possibile eseguire il rollout della pagina dell’indice blueprint quando rep:policy è applicato al nodo
+* SITES-16733 - MSM - Live Copy - Impossibile eseguire il rollout della pagina dell&#39;indice blueprint quando la rappresentazione :policy è applicata al nodo
 * SITES-17155 - MSM - Live Copy - Le intestazioni e i piè di pagina vengono tradotti nuovamente in inglese quando la Live Copy viene rinominata
 * SITES-19316 - MSM - Live Copy - Il collegamento di riferimento al frammento di esperienza non viene aggiornato nella copia per lingua
 * SITES-19347 - MSM - Live Copy - Messaggi di rallentamento nell’authoring e nella produzione e interruzione del servizio - Riavvio frequente dei pod: Avvisi di stato
@@ -218,7 +218,7 @@ Con l’attivazione delle funzioni 2024.3.0 viene fornito il set di funzioni com
 
 ### Problemi noti {#known-issues-15787}
 
-* SITES-17934 - Frammenti di contenuto - Anteprima non riuscita a causa della protezione DoS per una struttura ad albero di frammenti di grandi dimensioni. Consulta la [KB](https://experienceleague.adobe.com/it/docs/experience-cloud-kcs/kbarticles/ka-23945)
+* SITES-17934 - Frammenti di contenuto - Anteprima non riuscita a causa della protezione DoS per una struttura ad albero di frammenti di grandi dimensioni. Vedi [Articolo della Knowledge Base](https://experienceleague.adobe.com/it/docs/experience-cloud-kcs/kbarticles/ka-23945).
 
 ### Funzioni e API obsolete {#deprecated-15787}
 
@@ -243,7 +243,7 @@ Con l’attivazione delle funzioni 2024.3.0 viene fornito il set di funzioni com
 
 ### Miglioramenti {#enhancements-15575}
 
-Nessuno.
+Nessuna.
 
 ### Problemi risolti {#fixed-issues-15575}
 
@@ -252,7 +252,7 @@ Nessuno.
 
 ### Problemi noti {#known-issues-15575}
 
-Nessuno.
+Nessuna.
 
 ### Notifica di modifica {#change-notice-15575}
 
@@ -321,7 +321,7 @@ Per l’elenco completo dei miglioramenti apportati alle Guide AEM, consulta: [N
 * ASSETS-18088: aggiorna le dipendenze della libreria batik alla versione 1.17.
 * ASSETS-21965: il flusso di lavoro di write-back dei metadati deve essere avviato solo in caso di modifiche ai metadati delle risorse.
 * ASSETS-26368: i processi di importazione in blocco pianificati non vengono rimossi se non esiste una configurazione dei processi.
-* ASSETS-26549: risorse/nodi con “jcr:lastModifiedBy”: “workflow-process-service” mostrano “utente esterno” nella vista a elenco.
+* ASSETS-26549: Assets / Nodes con &quot;jcr:lastModifiedBy&quot;: &quot;workflow-process-service&quot; mostra come &quot;utente esterno&quot; nella vista a elenco.
 * ASSETS-26842: aggiorna il testo “Firefly” per leggere “App Builder” nel profilo di elaborazione.
 * ASSETS-28708: risposta molto lenta per alcune richieste di token IMS.
 * ASSETS-28767: stato di pubblicazione incoerente sulle risorse se la cartella contiene un numero elevato di risorse pubblicate.
@@ -337,7 +337,7 @@ Per l’elenco completo dei miglioramenti apportati alle Guide AEM, consulta: [N
 * ASSETS-31015: impossibile caricare le risorse con estensione msg.
 * ASSETS-31038: gli eventi di attività ricevuti dal servizio di notifica non vengono elaborati.
 * ASSETS-31097: disabilitata la copia asincrona per il contenuto WCM per evitare avvisi di query trasversali.
-* ASSETS-31256: Le risorse/nodi con &quot;jcr:lastModifiedBy&quot;: &quot;workflow-process-service&quot; mostrano “utente esterno” nella vista a elenco.
+* ASSETS-31256: Assets / Nodes con &quot;jcr:lastModifiedBy&quot;: &quot;workflow-process-service&quot; mostra come &quot;utente esterno&quot; nella vista a elenco.
 * ASSETS-31260: il campo a discesa Modulo metadati risorse non funziona correttamente se il JSON del menu a discesa contiene un elenco voluminoso.
 * ASSETS-31280: quando vengono aggiunte a una raccolta, le risorse vengono scaricate in una struttura semplificata.
 * ASSETS-31301: un’istanza di `dynamicmedia_sly.js` non può essere creata correttamente dall’API Use.
@@ -356,10 +356,10 @@ Per l’elenco completo dei miglioramenti apportati alle Guide AEM, consulta: [N
 * ASSETS-33454: l’attività di revisione attività e i commenti non vengono visualizzati nella timeline.
 * ASSETS-34088: l’anteprima PDF non funziona su AEM Assets.
 * ASSETS-34155: Dynamic Media: sono stati aggiornati i visualizzatori AEM/2024.1.0.
-* ASSETS-34684: gestisce dc:title multivalore nella struttura del contenuto.
+* ASSETS-34684: gestisci dc:title multivalore nella struttura contenuto.
 * ASSETS-34789: risolve i problemi di normalizzazione nella verifica dei conflitti dei nomi file.
 * DXML-13276: guide AEM: integrati gli indici in GraniteContent e rimossi dalla libreria.
-* GRANITE-47995: le operazioni di eliminazione possono non riuscire a causa di conflitti con la proprietà “cq:isDelivered”.
+* GRANITE-47995: le operazioni di eliminazione potrebbero non riuscire a causa di conflitti con la proprietà &quot;cq:isDelivered&quot;.
 * GRANITE-48079: abilita le richieste POST per la convalida dei token online OAuth.
 * GRANITE-48143: aggiornamento di org.apache.sling.resourcemerger alla versione 1.4.4.
 * GRANITE-49031: aggiornamento a Jackson 2.16.1.
