Updated by task 'AUTO_TM_MT_1754590611139' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/e7c5510837db692db2c83ee1b031875e0bfd1d97

--- a/help/implementing/cloud-manager/release-notes/2025/2025-7-0.md
+++ b/help/implementing/cloud-manager/release-notes/2025/2025-7-0.md
@@ -1,61 +1,42 @@
 ---
-title: Note sulla versione 2025.8.0 di Cloud Manager
-description: Scopri la versione 2025.8.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service.
+title: Note sulla versione 2025.7.0 di Cloud Manager
+description: Scopri la versione 2025.7.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service.
 feature: Release Information
 role: Admin
-exl-id: 24d9fc6f-462d-417b-a728-c18157b23bbe
-source-git-commit: 34e17f63809de261dcd2c6b741f525058600a987
+source-git-commit: 040c8af18353cbcb9242570e6bb3bac73928e2fa
 workflow-type: tm+mt
-source-wordcount: '1414'
-ht-degree: 62%
+source-wordcount: '1206'
+ht-degree: 98%
 
 ---
 
-# Note sulla versione 2025.8.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service {#release-notes}
+# Note sulla versione 2025.7.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service {#release-notes}
 
-<!-- https://wiki.corp.adobe.com/display/DMSArchitecture/%5BKT%5D+Cloud+Manager+2025.08.0+Release -->
+<!-- https://wiki.corp.adobe.com/display/DMSArchitecture/Cloud+Manager+2025.03.0+Release -->
 
-Scopri la versione 2025.8.0 di Cloud Manager in AEM (Adobe Experience Manager) as a Cloud Service.
+Scopri la versione 2025.7.0 di Cloud Manager in AEM (Adobe Experience Manager) as a Cloud Service.
 
 Consulta anche le [note sulla versione corrente di Adobe Experience Manager as a Cloud Service](/help/release-notes/release-notes-cloud/release-notes-current.md).
 
 ## Date di pubblicazione {#release-date}
 
-La versione 2025.8.0 di Cloud Manager in AEM as a Cloud Service è stata rilasciata il venerdì 7 agosto 2025.
+La versione 2025.7.0 di Cloud Manager in AEM as a Cloud Service è stata rilasciata il 10 luglio 2025.
 
-La prossima versione è pianificata per il venerdì 4 settembre 2025.
-
-
-
-
-
+La prossima versione è pianificata per il 7 agosto 2025.
 
 ## Novità {#what-is-new}
 
-* **La licenza Edge Delivery Services può essere inclusa in un programma HIPAA in modo autonomo**
+* **In Cloud Manager è stato aggiunto il supporto per i certificati SSL con ECDSA (Elliptic Curve Digital Signature Algorithm)**
 
-  Le organizzazioni che necessitano di assistenza sanitaria o di dati sensibili possono ora utilizzare Edge Delivery Services in modo autonomo, garantendo la conformità HIPAA ai severi standard normativi. <!-- CMGR-70016 -->
+  Cloud Manager ora supporta i certificati ECDSA. Questa funzione garantisce un livello di sicurezza elevato con chiavi di dimensioni più piccole e consente di applicare una crittografia moderna e leggera alle configurazioni CDN. <!-- https://jira.corp.adobe.com/browse/CMGR-62399 -->
 
-* **BYOG è ora disponibile per Edge Delivery Services**
+* **Scarica il report sull’utilizzo della licenza del sito**
 
-  Cloud Manager ora consente di configurare archivi Git esterni, abilitando flussi di lavoro flessibili per la gestione del codice. <!--(CMGR‑69010, CMGR‑70988) --> Consente inoltre di estrarre il codice da un ramo scelto direttamente nell&#39;interfaccia utente di Cloud Manager, riducendo le attività manuali dell&#39;archivio. Vedi [Configurare il sito Edge Delivery per l&#39;utilizzo di un archivio Git esterno](/help/implementing/cloud-manager/edge-delivery/config-edge-delivery-site-with-byog.md) <!-- (CMGR‑68085)(CMGR-69015) --> <!-- KT: https://wiki.corp.adobe.com/display/DMSArchitecture/%5B2025%5D+Cloud+Manager+-+Bring+Your+Own+Git+with+EDS -->
+  Nella pagina **Dettagli sull’utilizzo di Sites** (in Cloud Manager, fai clic su **Licenza**. nella tabella Soluzioni, nella riga **Sites**, fai clic su **Visualizza dettagli sull’utilizzo**), la clientela può ora fare clic su **Scarica report** per esportare i dati come file CSV. Questo scaricamento semplifica l’analisi e la condivisione delle tendenze di utilizzo. <!-- https://jira.corp.adobe.com/browse/CMGR-42274 -->
 
-* **Provisioning automatico per il nuovo componente aggiuntivo Forms**
+  ![Dettagli sull’utilizzo di Sites](/help/implementing/cloud-manager/release-notes/assets/sites-license-usage-page.png)
 
-  I clienti che utilizzano solo Sites hanno spesso bisogno di un modo leggero e a basso costo per creare moduli di marketing. Il nuovo componente aggiuntivo AEM Forms Sites soddisfa tale esigenza aggiungendo funzionalità Forms limitate a un programma Sites. Se necessario, crea anche un chiaro percorso di aggiornamento all’offerta completa di AEM Forms. <!-- (CMGR-64301) --> <!-- KT: CMGR Provisioning Support for AEM Forms Sites Add-On SKU https://wiki.corp.adobe.com/pages/viewpage.action?pageId=3578379797 -->
-
-  Componente aggiuntivo:
-   * Si collega a un programma Sites e viene distribuito insieme a esso, senza alcun programma Forms separato o diritto.
-   * Sono indirizzati a casi di utilizzo semplici per moduli di marketing.
-   * Viene visualizzato nell&#39;elenco **Soluzioni e componenti aggiuntivi** durante la creazione del programma di produzione o la modifica del programma di produzione, solo quando l&#39;organizzazione IMS dispone di licenze aggiuntive Forms disponibili.
-
-     ![Componenti aggiuntivi per Forms](/help/implementing/cloud-manager/release-notes/assets/forms-add-on.png) *Il componente aggiuntivo per Forms può essere aggiunto al programma solo se le licenze dei componenti aggiuntivi per Forms sono disponibili nella tua organizzazione IMS.*
-
-     ![Componente aggiuntivo Forms in soluzioni e componenti aggiuntivi durante la creazione di un programma di produzione](/help/implementing/cloud-manager/release-notes/assets/forms-add-on-creating-production-program.png) *Durante la creazione del programma, è possibile selezionare il componente aggiuntivo Forms nella soluzione Sites.*
-
-     ![Componente aggiuntivo Forms durante la modifica di un programma di produzione](/help/implementing/cloud-manager/release-notes/assets/forms-add-on-editing-production-program.png) *In **Modifica programma**, selezionare il componente aggiuntivo Forms per il programma Sites, quindi eseguire la pipeline per attivarlo negli ambienti.*
-
-     Per ulteriori informazioni, vedere [Creare un programma di produzione](/help/implementing/cloud-manager/getting-access-to-aem-in-cloud/creating-production-programs.md).
+  Consulta [Dashboard delle licenze](/help/implementing/cloud-manager/license-dashboard.md).
 
 ## Programmi Beta {#private-beta-program}
 
@@ -91,10 +72,7 @@ Consulta anche [Ripristino dei contenuti in AEM as a Cloud Service](/help/operat
 
 Cloud Manager ora supporta l’aggiunta di un nuovo tipo di ambiente denominato **Ambiente di test specializzato**. L’ambiente è progettato per aiutare i team a convalidare le funzioni in condizioni prossime alla produzione prima della pubblicazione. Questo tipo di ambiente è diverso dagli ambienti *Produzione + Fase*, *Sviluppo* o *Sviluppo rapido* e offre uno spazio mirato per l’esecuzione di scenari di convalida avanzati.
 
-**Miglioramenti recenti**
-
-* Ora puoi configurare un ambiente di test specializzato su una pipeline non di produzione tramite un flusso di lavoro più semplice e intuitivo. La configurazione semplificata accelera il completamento e riduce gli errori di configurazione.
-* **Copia contenuto** è ora supportato in ambienti di test specializzati. È ora possibile eseguire **Copia contenuto** in modo sicuro in ambienti di test isolati che rispecchiano la produzione. <!-- (CMGR‑68900) -->
+Miglioramento recente: ora puoi configurare ambienti di test specializzati su una pipeline non di produzione tramite un flusso di lavoro più semplice e intuitivo. La configurazione semplificata accelera il completamento e riduce gli errori di configurazione.
 
 Consulta [Aggiungere un ambiente di test specializzato](/help/implementing/cloud-manager/specialized-test-environment.md).
 
@@ -103,7 +81,7 @@ Consulta [Aggiungere un ambiente di test specializzato](/help/implementing/cloud
 Se ti interessa testare questa nuova funzione e condividere il tuo feedback, invia un’e-mail a [grp-earlyadopter_cs_advtestenvironment@adobe.com](mailto:grp-earlyadopter_cs_advtestenvironment@adobe.com) dall’indirizzo e-mail associato al tuo Adobe ID.
 
 
-### Porta il tuo Git (BYOG) {#gitlab-bitbucket-azure-vsts}
+### BYOG (Bring Your Own Git): ora con supporto per Azure DevOps {#gitlab-bitbucket-azure-vsts}
 
 <!-- BOTH CS & AMS -->
 
@@ -127,7 +105,7 @@ Se ti interessa testare questa nuova funzione e condividere il tuo feedback, inv
 |---|---|
 | *Come può un progetto tornare all’archivio Git gestito da Adobe, se necessario?* | Tornare indietro è semplice. [Aggiorna le pipeline](/help/implementing/cloud-manager/configuring-pipelines/managing-pipelines.md) in modo che puntino all’archivio Adobe e rimuovi l’archivio esterno se non è più necessario. |
 | *È possibile configurare archivi diversi per ambienti diversi (ad esempio, non di produzione o di produzione) per consentire prima il test in ambienti non di produzione?* | Sì, è possibile configurare archivi diversi per ambienti separati. Ad esempio, la pipeline di sviluppo o di qualità del codice può puntare a un archivio esterno mentre la pipeline di produzione rimane connessa all’archivio Adobe. Assicurati che il processo di sincronizzazione tra i due archivi rimanga attivo durante questa configurazione. |
-| *Le impostazioni esistenti come gli elenchi `IP Allow` continuano a funzionare?* | Sì, gli elenchi `IP Allow` esistenti continuano a funzionare normalmente. Tuttavia, se l’archivio Git esterno è protetto da un firewall, gli [Indirizzi IP Adobe necessari devono essere aggiunti all’elenco consentiti](/help/implementing/cloud-manager/ip-allow-lists/introduction.md). |
+| *Le impostazioni esistenti come gli elenchi IP consentiti continuano a funzionare?* | Sì, gli elenchi IP consentiti esistenti continuano a funzionare come al solito. Tuttavia, se l’archivio Git esterno è protetto da un firewall, gli [Indirizzi IP Adobe necessari devono essere aggiunti all’elenco consentiti](/help/implementing/cloud-manager/ip-allow-lists/introduction.md). |
 | *Funzionano tutti gli URL dell’archivio GitLab? L’URL dell’archivio in uso segue il formato `https://gitlab_dedicated_url.com/path/repo-name.git`, che differisce dall’esempio riportato nella documentazione.* | Sì, è supportato qualsiasi archivio GitLab che supporta API V3 o V4, inclusi gli URL GitLab con hosting autonomo come quelli descritto in [Aggiungere archivi esterni in Cloud Manager](/help/implementing/cloud-manager/managing-code/external-repositories.md) (`https://git-vendor-name.com/org-name/repo-name.git`). |
 
 
@@ -144,32 +122,22 @@ Se ti interessa testare questa nuova funzione e condividere il tuo feedback, inv
 
 Le pipeline di configurazione sono ora supportate per i siti creati con Edge Delivery Services, espandendo questa funzionalità oltre i singoli ambienti di Cloud Service. È possibile utilizzare le **pipeline di configurazione** per gestire impostazioni quali le regole di filtro del traffico e le configurazioni del firewall per applicazioni web (WAF), se applicabile. Consulta le [configurazioni supportate](/help/operations/config-pipeline.md#configurations).
 
-**Miglioramento recente**
-
-* Le pipeline di Edge Delivery Services ora visualizzano **Configurazione** nella colonna **Codice distribuito**, consentendo l&#39;identificazione immediata delle distribuzioni di sola configurazione. <!-- CMGR‑69681 -->
-* Cloud Manager mostra **Aggiungi pipeline Edge Delivery** quando un programma contiene almeno un sito Edge Delivery Services e un dominio mappato. In caso contrario, l’opzione risulta disabilitata e una descrizione comando spiega i requisiti mancanti. <!-- CMGR‑69680 -->
-* Nella scheda **Edge Delivery** è visualizzato un nuovo widget **Edge Delivery pipeline** in cui sono elencati il nome, lo stato, l&#39;archivio e il ramo di ogni pipeline. <!-- (CMGR-69052) -->
-
-  ![Widget pipeline Edge Delivery con nome pipeline, stato, repository e ramo](/help/implementing/cloud-manager/release-notes/assets/edge-delivery-pipeline-widget.png)
-
-* Il pannello **Filtri** aggiunge una sezione **Tipo di consegna**; include le caselle di controllo **Consegna Edge** e **Consegna pubblicazione**. <!-- (CMGR-69682) -->
-
-  ![Pannello dei filtri che mostra il nuovo tipo di consegna Edge e la consegna Publish](/help/implementing/cloud-manager/release-notes/assets/filter-delivery-type.png)
-
 ![Aggiungi pipeline Edge Delivery nell’elenco a discesa Aggiungi pipeline](/help/implementing/cloud-manager/release-notes/assets/edge-delivery-pipeline-add.png) *Aggiunta di una pipeline Edge Delivery dalla pagina **Panoramica del programma**, scheda **Pipeline**.*
 
 ![Finestra di dialogo Aggiungi pipeline di Edge Delivery](/help/implementing/cloud-manager/release-notes/assets/edge-delivery-pipeline-add-dialogbox.png) *Finestra di dialogo Aggiungi pipeline di Edge Delivery.*
-
-Vedi [Aggiungi pipeline Edge Delivery](/help/implementing/cloud-manager/configuring-pipelines/configuring-edge-delivery-pipeline.md)
 
 Se ti interessa testare questa nuova funzione e condividere il tuo feedback, invia un’e-mail a [grp-aemeds-config-pipeline-adopter@adobe.com](mailto:grp-aemeds-config-pipeline-adopter@adobe.com) dall’indirizzo e-mail associato al tuo Adobe ID.
 
 
 ## Correzioni di bug
 
-* Le pipeline ora distribuiscono variabili solo alla configurazione del dominio Edge Delivery Services attivo, ignorando eventuali configurazioni rimosse durante la ricreazione della pipeline. <!-- (CMGR‑70039) -->
-* L’esecuzione della pipeline ora viene avviata in modo affidabile; è stato risolto un problema che impediva l’avvio di alcune pipeline a causa di errori di gestione delle risorse interne. <!-- (CMGR‑58167) -->
-* La copia del contenuto convalida le autorizzazioni di Cloud Manager e blocca l’avvio del sistema da parte di utenti che non dispongono dei diritti di Manager implementazione o Amministratore. <!-- (CMGR‑62097) -->
+* Cloud Manager ora aggiorna la versione di tutte le pipeline durante gli aggiornamenti dell’ambiente, garantendo un tracciamento coerente delle versioni per tutti i tipi di pipeline. <!-- CMGR-69043 -->
+* Ora l’interfaccia utente visualizza messaggi di stato e messaggi di errore dettagliati quando un certificato SSL di convalida del dominio (DV) non riesce, utili per comprendere e risolvere i problemi relativi ai certificati. <!-- CMGR-68872 -->
+* Durante la modifica di una mappatura di dominio, l’interfaccia utente ora impedisce la selezione di certificati SSL che non corrispondono al dominio scelto, riducendo gli errori di configurazione e migliorando l’affidabilità durante la configurazione. <!-- CMGR-64307 -->
+* In alcune situazioni, i certificati non venivano eliminati correttamente, mantenendo il dominio ancora attivo. <!-- CMGR-69867 -->
+* È stato risolto un problema che in alcuni casi poteva bloccare gli aggiornamenti da *Adobe Assets* a *Adobe Assets Ultimate*. Le transizioni sono ora più fluide e affidabili. <!-- CMGR-69506 -->
+* È stato risolto un problema che causava l’impostazione automatica dei campi delle aree chiave durante la creazione di ambienti con più aree geografiche, al fine di supportare servizi e implementazioni a valle fluidamente. <!-- CMGR-69471 -->
+* È stato risolto un problema che impediva la corretta interruzione di alcune pipeline di configurazione dopo l’esecuzione. Ora le pipeline vengono completate correttamente e chiuse come previsto, migliorando l’affidabilità. <!-- CMGR-69344 -->
 
 
 <!-- ## Known issues {#known-issues} -->
