Updated by task 'AUTO_TM_MT_1754628925686' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/87650caea6eb907093f0f327f1dbc19641098e4a

--- a/help/release-notes/maintenance/2025/2025-7-0.md
+++ b/help/release-notes/maintenance/2025/2025-7-0.md
@@ -4,10 +4,10 @@ description: Note sulla versione di manutenzione di  [!DNL Adobe Experience Mana
 feature: Release Information
 role: Admin
 exl-id: 8f2f9d28-7ca2-41cf-83d3-6a9be5fc3531
-source-git-commit: ee00c1f390398df3194ad6ac2d876e7c2c766b11
+source-git-commit: 87650caea6eb907093f0f327f1dbc19641098e4a
 workflow-type: tm+mt
 source-wordcount: '2986'
-ht-degree: 97%
+ht-degree: 96%
 
 ---
 
@@ -15,7 +15,7 @@ ht-degree: 97%
 
 La sezione seguente illustra le note di rilascio tecnico sulla versione di manutenzione di Experience Manager as a Cloud Service associata all’attivazione delle funzioni 2025.7.0.
 
-## Versione 21706 {#21706}
+## Versione 21706
 
 Di seguito sono riepilogati i miglioramenti continui relativi alla versione di manutenzione 21706, rilasciata pubblicamente il 24 luglio 2025. La versione di manutenzione precedente era la 21570.
 
@@ -90,7 +90,7 @@ AEM as a Cloud Service è dedicato all’ottimizzazione della sicurezza e delle 
 | Apache HTTP Server | 2.4.63 | [Apache Httpd 2.4.63](https://github.com/apache/httpd/blob/2.4.63/CHANGES) |
 | Componenti core AEM | 2.29.0 | [Componenti core WCM AEM](https://github.com/adobe/aem-core-wcm-components) |
 
-## Versione 21570 {#21570}
+## Versione 21570
 
 Di seguito sono riepilogati i miglioramenti continui relativi alla versione di manutenzione 21570, rilasciata pubblicamente il 15 luglio 2025. La versione di manutenzione precedente era la 21484.
 
@@ -131,7 +131,7 @@ Nessuna.
 | Apache HTTP Server | 2.4.63 | [Apache Httpd 2.4.63](https://github.com/apache/httpd/blob/2.4.63/CHANGES) |
 | Componenti core AEM | 2.29.0 | [Componenti core WCM AEM](https://github.com/adobe/aem-core-wcm-components) |
 
-## Versione 21484 {#21484}
+## Versione 21484
 
 Di seguito sono riepilogati i miglioramenti continui relativi alla versione di manutenzione 21484, rilasciata pubblicamente il 10 luglio 2025. La versione di manutenzione precedente era la 21331.
 
@@ -180,7 +180,7 @@ AEM as a Cloud Service è dedicato all’ottimizzazione della sicurezza e delle 
 | AEM HTL | 1.4.28-1.4.0 | [Specifiche HTML Template Language](https://github.com/adobe/htl-spec) |
 | Componenti core AEM | 2.29.0 | [Componenti core WCM AEM](https://github.com/adobe/aem-core-wcm-components) |
 
-## Versione 21331 {#21331}
+## Versione 21331
 
 Di seguito sono riepilogati i miglioramenti continui relativi alla versione di manutenzione 21331, rilasciata pubblicamente il 24 giugno 2025. La versione di manutenzione precedente era la 21193.
 
@@ -202,7 +202,7 @@ Con la versione di attivazione delle funzioni 2025.7.0 viene fornito il set comp
 * SITES-23499: Edge Delivery con l’editor universale: aggiungi l’utilizzo di un supporto per più campi per le opzioni di blocco.
 * SITES-23518: Edge Delivery con l’editor universale: aggiungi supporto a rappresentazioni di risorse specifiche Edge Delivery.
 * SITES-24436: API REST per frammenti di contenuto: è stata introdotta la cache locale per velocizzare il recupero di riferimenti duplicati.
-* SITES-25155: API REST per frammenti di contenuto: rimozione del parametro di query “enabledForFolder” obsoleto dall’elenco Modelli.
+* SITES-25155: API Rest dei frammenti di contenuto: rimuovi il parametro di query &quot;enabledForFolder&quot; obsoleto nell’elenco Modelli.
 * SITES-25913: API REST di frammenti di contenuto: convalida delle risorse in base al tempo prima di avviare il flusso di lavoro di pubblicazione.
 * SITES-25976: i collegamenti all’interno dei frammenti esperienza non si adattano dopo il rollout di MSM.
 * SITES-26271: API REST di frammenti di contenuto: passa a BFS Traversal per l’endpoint di variante GET.
